2024/Q4/tips-of-spring-data-jpa/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: training-20241129
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      securityContext:
        runAsUser: 1001
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - "training-20241129"
                topologyKey: kubernetes.io/hostname
      containers:
        - name: training-20241129
          image: tw.com.softleader.example/training-20241129
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
              scheme: HTTP
            initialDelaySeconds: 3
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 1.5
              memory: 1.5G
