2024/Q4/tips-of-spring-data-jpa/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: training-20241129
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      protocol: TCP
