2024/Q4/tips-of-spring-data-jpa/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: training-20241129
  annotations:
    ingress.softleader.com.tw/automanaged: "true"
spec:
  ingressClassName: istio
  rules:
    - host: ""
      http:
        paths:
          - backend:
              service:
                name: training-20241129
                port:
                  name: http
            path: /
            pathType: Prefix
